--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "overrides": [
-    {
-      "files": ["*.ts, *.tsx"],
-      "rules": {
-        "@typescript-eslint/no-unused-vars": "error"
-      }
-    }
-  ]
+  "extends": "next/core-web-vitals"
 }
